[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Levels/CutsceneInicial.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/initial_cutscene.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sprites/cutscene_placeholder.jpeg" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/gdp grab item final.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CutsceneIncial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 210.0
margin_top = 150.0
margin_right = 403.0
margin_bottom = 164.0
rect_scale = Vector2( 3, 3 )
autowrap = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 370.0
margin_top = 20.0
margin_right = 675.0
margin_bottom = 568.0
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 1 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="gui_input" from="." to="." method="_on_CutsceneInicial_gui_input"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="SFXPlayer" to="." method="_on_SFXPlayer_finished"]
